--- a/Deadline-API/package.json
+++ b/Deadline-API/package.json
@@ -1,6 +1,5 @@
 {
   "dependencies": {
-    "body-parser": "^1.20.1",
     "connect-mongo": "^4.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -8,9 +7,13 @@
     "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5",
+    "nodemon": "^2.0.20",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.1.2"
+  }
+  "scripts": {
+    "start": "nodemon app.ts"
   }
 }
